# sam3d

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  requirements.inference.txt  requirements.txt
src/sam3d/: __init__.py  api.py  config.py  download_models.py  loaders.py  service.py
src/sam3d/tests/: conftest.py  test_load_models.py
