[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3d"
version = "0.1.1"
description = "Unified Python interface for Meta SAM 3D Body and SAM 3D Objects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
]

[project.optional-dependencies]
inference = []
service = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]
download = [
  "huggingface_hub>=0.23.0",
  "modelscope>=1.16.0",
]
mcp = [
  "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/rudaoshi/sam3d"
Repository = "https://github.com/rudaoshi/sam3d"
Issues = "https://github.com/rudaoshi/sam3d/issues"

[project.scripts]
sam3d-http = "sam3d.service:main"
sam3d-mcp = "sam3d.mcp_server:main"
sam3d-download = "sam3d.download_models:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
